force-app/main/default/objects/Class_Student__c/Class_Student__c.object-meta.xml
<CustomObject>
    <label>Class Student</label>
    <nameField>
        <label>StudentClassName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class_Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>