force-app/main/default/objects/Class_Student__c/fields/Donation_Paid__c.field-meta.xml
<CustomField>
    <fullName>Donation_Paid__c</fullName>
    <label>Donation Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>