force-app/main/default/objects/Class_Student__c/fields/IsNewStudent__c.field-meta.xml
<CustomField>
    <fullName>IsNewStudent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNewStudent</label>
    <type>Checkbox</type>
</CustomField>