force-app/main/default/objects/Class_Student__c/fields/StudentNew__c.field-meta.xml
<CustomField>
    <fullName>StudentNew__c</fullName>
    <label>StudentNew</label>
    <referenceTo>StudentNew__c</referenceTo>
    <relationshipName>StudentClassEnrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>